--- a/index.html
+++ b/index.html
@@ -2,7 +2,6 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
@@ -28,8 +27,11 @@
 
     <div id="gridprojects">
       <div class="item1">
-        <p class="numero">1</p>
-        <img src="/assets/home/illumia.png">
+        <p class="numero">1</p><!-- 
+        <a href="/pages/illumia.html"> -->
+          <img src="/assets/home/illumia.png" >
+          <img src="/assets/home/mask/illumiamask.png" class="overlay">
+        </a>
       </div>
       <div class="item2" id="brut">
         <p class="numero">2</p>
