--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -5,16 +5,20 @@
     <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-    <title>  </title>
-    <link rel="icon" type="image/x-icon" href="/assets/margherita.png">
+    <link rel="icon" type="image/x-icon" href="./assets/margherita.png">
+  
+    <!--  STYLE -->  
+    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./project.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
 
-     <!--   FONT -->  
-     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-     <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
- 
-
-    <link rel="stylesheet" type="text/css" href="../style.css">
-    <link rel="stylesheet" type="text/css" href="project.css">
+  <!--   FONT -->  
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap" rel="stylesheet">
+  
+    <!--  LIBRARIES -->  
+    <script src="./libraries/p5.min.js"></script><!-- 
+    <script src="/libraries/p5.sound.min.js"></script> -->
   </head>
 
   <body>
