--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -27,6 +27,7 @@
         <p class="nav" id="io">Hi, my name is <a href="/about.html">Martina</a> :)</p>
         <p class="nav"  id="works">and these are <a href="/index.html">my works</a> </p>
     
+    <!--   DESCRIZIONE PROGETTO-->
     <div id="projectlist"> 
       <div>
        <div id="titolo"> Illumia </div>
@@ -78,7 +79,7 @@
 
     </div>
 
-      
+        <!--   GALLERIA PROGETTO-->
     <div id="projectgallery"> 
       <img src="../assets/Illumia/DSC05861_anita.png"> 
       <img class= "galleryelement" src="../assets/Illumia/DSC06141-Edit 3.png">
