--- a/about.html
+++ b/about.html
@@ -33,7 +33,7 @@
     <!--   PRESENTAZIONE -->
     <div id="selfp">
         Ciao, </br>
-        I am a young graphic designer based in Milan. </br>
+        I am a young graphic designer based in <!-- <a id="milan"> --> Milan.</br>
         I love photography, letters, books, drawing, coding, and more or less everything related to visual communication. </br></br>
         Looking forward to hearing from you! 
 
