--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/margherita.png">
   
     <!--  STYLE -->  
-    <link rel="stylesheet" type="text/css" href="./style.css">
+    <link rel="stylesheet" type="text/css" href="./../style.css">
     <link rel="stylesheet" type="text/css" href="./project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
