--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -6,7 +6,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
     <title>  </title>
-    <link rel="icon" type="image/x-icon" href="/assets/margherita.png">
+    <link rel="icon" type="image/x-icon" href="./assets/margherita.png">
 
      <!--   FONT -->  
      <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -21,8 +21,8 @@
   <body>
 
     <!--   ELEMENTI IN ALTO -->
-        <p class="nav" id="io">Hi, my name is <a href="/about.html">Martina</a> :)</p>
-        <p class="nav"  id="works">and these are <a href="/index.html">my works</a> </p>
+        <p class="nav" id="io">Hi, my name is <a href="../about.html">Martina</a> :)</p>
+        <p class="nav"  id="works">and these are <a href="../index.html">my works</a> </p>
    
     <div id="projectlist"> 
       
@@ -70,7 +70,7 @@
     
       <p class="listelement listanno">2023</p>
 
-      <p class="listelement">1. <a href="/pages/illumia.html">Illumia</a></p>
+      <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
       <p class="listelement"> N10 </p>
       <p class="listelement"> Book of self</p>
       <p class="listelement"> Drawing app</p>  
@@ -80,7 +80,7 @@
       <p class="listelement"> Un'estate</p>  
       <p class="listelement"> Valli Unite</p>
       <p class="listelement"> Factanza</p>  
-      <p class="listelement">7. <a href="/pages/calendario.html">Buongiorno, ogni giorno</a></p>
+      <p class="listelement">7. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
       <p class="listelement"> Martas Nature Bar </p>
 
       <p class="listelement listanno">2021</p>
