--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -8,7 +8,7 @@
     <link rel="icon" type="image/x-icon" href="./assets/margherita.png">
   
     <!--  STYLE -->  
-    <link rel="stylesheet" type="text/css" href="./../style.css">
+    <link rel="stylesheet" type="text/css" href="../style.css">
     <link rel="stylesheet" type="text/css" href="./project.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
 
@@ -24,8 +24,8 @@
   <body>
 
     <!--   ELEMENTI IN ALTO -->
-        <p class="nav" id="io">Hi, my name is <a href="/about.html">Martina</a> :)</p>
-        <p class="nav"  id="works">and these are <a href="/index.html">my works</a> </p>
+        <p class="nav" id="io">Hi, my name is <a href="../about.html">Martina</a> :)</p>
+        <p class="nav"  id="works">and these are <a href="../index.html">my works</a> </p>
     
     <!--   DESCRIZIONE PROGETTO-->
     <div id="projectlist"> 
@@ -91,7 +91,7 @@
     
       <p class="listelement listanno">2023</p>
 
-      <p class="listelement">1. <a href="/pages/illumia.html">Illumia</a></p>
+      <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
       <p class="listelement"> N10 </p>
       <p class="listelement"> Book of self</p>
       <p class="listelement"> Drawing app</p>  
@@ -101,7 +101,7 @@
       <p class="listelement"> Un'estate</p>  
       <p class="listelement"> Valli Unite</p>
       <p class="listelement"> Factanza</p>  
-      <p class="listelement">7. <a href="/pages/calendario.html">Buongiorno, ogni giorno</a></p>
+      <p class="listelement">7. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
       <p class="listelement"> Martas Nature Bar </p>
 
       <p class="listelement listanno">2021</p>
