--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -70,7 +70,7 @@
     
       <p class="listelement listanno">2023</p>
 
-      <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
+      <p class="listelement">1. <a href="../pages/illumia.html">Illumia</a></p>
       <p class="listelement"> N10 </p>
       <p class="listelement"> Book of self</p>
       <p class="listelement"> Drawing app</p>  
@@ -80,7 +80,7 @@
       <p class="listelement"> Un'estate</p>  
       <p class="listelement"> Valli Unite</p>
       <p class="listelement"> Factanza</p>  
-      <p class="listelement">7. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
+      <p class="listelement">7. <a href="../pages/calendario.html">Buongiorno, ogni giorno</a></p>
       <p class="listelement"> Martas Nature Bar </p>
 
       <p class="listelement listanno">2021</p>
