--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -63,6 +63,10 @@
       <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 10.png">
       <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 11.png">
       <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 2.png">
+      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 7.png">
+      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 8.png">
+      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 9a.png">
+      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 12.png">
     </div>
     
 
