--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 
       <div class="item1" id="illumia"> <!-- ILLUMIA -->
         <p class="numero">1</p>
-        <!-- <a href="/pages/illumia.html"> -->
+        <a href="./pages/illumia.html">
           <img src="./assets/home/illumia.png" >
           <img src="./assets/home/mask/illumiamask.png" class="overlay">
         <!-- </a> -->
