--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -36,10 +36,11 @@
           at breakfast time, returning the feeling of that
           particular period of the year by combining seasonal
           food with different lights and shades of color.
-          Though the habit of breakfast hasn't got anything
+          Though the habit of breakfast hasn’t got anything
           artistic in itself, it can become a moment of care
           and beauty to start the day in a different mood.
-          For this project, I was interviewed by an
+          For this project, I was <a href="https://www.brillomagazine.it/la-bellezza-del-quotidiano-nelle-illustrazioni-di-martina-esposito/?lang=it">interviewed by Brillo</a>, an Italian
+          magazine about illustration.
         </div>
       </div>
 
