--- a/index.html
+++ b/index.html
@@ -65,8 +65,10 @@
       </div>
       <div class="item7">  <!-- UN'ESTATE -->
         <p class="numero">7</p>
-        <img src="./assets/home/riso.png">
-        <img src="./assets/home/mask/risomask.png" class="overlay">
+        <a href="./pages/calendario.html">
+          <img src="./assets/home/riso.png">
+          <img src="./assets/home/mask/risomask.png" class="overlay">
+        </a>
       </div>
       <div class="item8">  <!-- CALENDARIO -->
         <p class="numero">8</p>
