--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -78,12 +78,21 @@
       </div>
 
     </div>
-    
+
         <!--   GALLERIA PROGETTO-->
     <div id="projectgallery"> 
       <img src="../assets/Illumia/DSC05861_anita.png"> 
       <img class= "galleryelement" src="../assets/Illumia/DSC06141-Edit 3.png">
       <img class= "galleryelement" src="../assets/Illumia/ILLUMIA_2.jpg">
+
+      <video width="520px" height="100px" controls poster="../assets/Illumia/illumia_trailer_Moment.jpg">
+        <source src="https://youtu.be/xHrGZHcw4C4?si=QhRAXrJIWZ7shSP2" type="video/mp4">
+      </video>
+
+      <video  width="100%" height="auto" controls >
+        <source src="https://youtu.be/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd" type="video/mp4">
+      </video>
+
     </div>
     
 
