--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -85,13 +85,24 @@
       <img class= "galleryelement" src="../assets/Illumia/DSC06141-Edit 3.png">
       <img class= "galleryelement" src="../assets/Illumia/ILLUMIA_2.jpg">
 
-      <video width="520px" height="100px" controls poster="../assets/Illumia/illumia_trailer_Moment.jpg">
-        <source src="https://youtu.be/xHrGZHcw4C4?si=QhRAXrJIWZ7shSP2" type="video/mp4">
-      </video>
+      
+      <iframe width="100%" height="1000px" src="https://www.youtube.com/embed/Dx4UVzjqef0?si=xQPI4wIkTbDm1-Sk" 
+      title="YouTube video player" frameborder="0" 
+      allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
+      class= "galleryelement" >
+      </iframe>
 
-      <video  width="100%" height="auto" controls >
-        <source src="https://youtu.be/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd" type="video/mp4">
-      </video>
+      <video class= "galleryelement" width="100%" height="auto" poster="../assets/Illumia/illumia_trailer_Moment.jpg" controls>
+      <source src="../assets/Illumia/illumia_trailer.mp4" type="video/mp4">
+      </video >
+
+     <!--     <iframe width="100%" height="auto" controls source src="https://youtube/embed/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd">
+      </iframe> -->
+
+     <!--  <video>
+        <source type="video/youtube" width="100%" height="auto" controls id="dave">
+        <source src="https://youtu.be/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd" >
+      </video> -->
 
     </div>
     
