--- a/about.html
+++ b/about.html
@@ -32,12 +32,14 @@
         
     <!--   PRESENTAZIONE -->
     <div id="selfp">
-        Ciao, </br>
-        I am a young graphic designer based in <!-- <a id="milan"> --> Milan.</br>
-        I love photography, letters, books, drawing, coding, and more or less everything related to visual communication. </br></br>
-        Looking forward to hearing from you! 
+      <span id="ciao"> Ciao, </span></br>
+        I am a young graphic designer based in <span id="milan"> Milan.</span></br>
+        I love photography, letters, books, drawing, coding, and more or less  <span id="draw">
+        everything related to visual communication. </span></br>
+        Looking forward to hearing from you!  </br></br>
+        <img id="marghe" src="./assets/manine/marghe.png">
+        Here is a daisy to thank you </br> for your attention :)
 
-        <img src="./assets/manine/marghe.png">
     </div>
 
   <!-- ELENCO DI PROGETTI A DESTRA -->
