--- a/index.html
+++ b/index.html
@@ -30,14 +30,16 @@
 <!--   GRIGLIA DI PROGETTI -->
     <div id="gridprojects">
 
-      <div class="item1" id="illumia"> <!-- ILLUMIA -->
-        <p class="numero">1</p>
+      <div class="item1" id="illumia" title="ILLUMIA,2023"> <!-- ILLUMIA -->
         <a href="./pages/illumia.html">
-          <img src="./assets/home/illumia.png" >
-          <img src="./assets/home/mask/illumiamask.png" class="overlay">
+        <p class="numero">1</p>
+        <img src="./assets/home/illumia.png">
+        <img src="./assets/home/mask/illumiamask.png" class="overlay">
+        
+<!--         <p class="info">Illumia, 2023 </br> branding, speculative </p> -->
         </a>
       </div>
-      <div class="item2" id="brut"> <!-- VALLI UNITE -->
+      <div class="item2" id="brut" title="VALLI UNITE,2022"> <!-- VALLI UNITE -->
         <p class="numero">2</p>
         <img src="./assets/home/brut.png">
         <img src="./assets/home/mask/brutmask.png" class="overlay">
@@ -65,15 +67,15 @@
       </div>
       <div class="item7">  <!-- UN'ESTATE -->
         <p class="numero">7</p>
-        <a href="./pages/calendario.html">
           <img src="./assets/home/riso.png">
           <img src="./assets/home/mask/risomask.png" class="overlay">
-        </a>
       </div>
       <div class="item8">  <!-- CALENDARIO -->
+        <a href="./pages/calendario.html">
         <p class="numero">8</p>
         <img src="./assets/home/calendar.png">
         <img src="./assets/home/mask/calendarmask.png" class="overlay">
+        </a>
       </div>
       <div class="item9">  <!-- DESIGN YOUR WAY -->
         <p class="numero">9</p>
@@ -83,7 +85,7 @@
     </div>
 
      <!-- ELENCO DI PROGETTI A DESTRA -->
-    <div id="list"> 
+<!--     <div id="list"> 
     
       <p class="listelement listanno">2023</p>
       <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
@@ -104,7 +106,7 @@
       <p class="listelement"> Design your way</p>
       <p class="listelement"> La storia dimostra</p>
       <p class="listelement"> Bullet Journal</p>
-    </div>
+    </div> -->
 
     <!--<script src="sketch.js"></script>-->
   </body>
