--- a/index.html
+++ b/index.html
@@ -35,8 +35,6 @@
         <p class="numero">1</p>
         <img src="./assets/home/illumia.png">
         <img src="./assets/home/mask/illumiamask.png" class="overlay">
-        
-<!--         <p class="info">Illumia, 2023 </br> branding, speculative </p> -->
         </a>
       </div>
       <div class="item2" id="brut" title="VALLI UNITE,2022"> <!-- VALLI UNITE -->
@@ -61,9 +59,12 @@
         <img src="./assets/home/mask/palomarmask.png" class="overlay">
       </div>
       <div class="item6">  <!-- BOOK OF SELF -->
+        <a href="./pages/book of self.html"></a>
         <p class="numero">6</p>
         <img src="./assets/home/self.png">
         <img src="./assets/home/mask/selfmask.png" class="overlay">
+        <p class="info">Book of self, 2023 </br> a collection of analog photography prints </p>
+
       </div>
       <div class="item7">  <!-- UN'ESTATE -->
         <p class="numero">7</p>
@@ -85,7 +86,7 @@
     </div>
 
      <!-- ELENCO DI PROGETTI A DESTRA -->
-<!--     <div id="list"> 
+    <div id="list"> 
     
       <p class="listelement listanno">2023</p>
       <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
@@ -106,7 +107,7 @@
       <p class="listelement"> Design your way</p>
       <p class="listelement"> La storia dimostra</p>
       <p class="listelement"> Bullet Journal</p>
-    </div> -->
+    </div>
 
     <!--<script src="sketch.js"></script>-->
   </body>
