--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -52,8 +52,8 @@
         banners filled the streets while magazines and
         influential people raced to meet the miraculous
         machine and interview its discoverer.
-        The project has been exposed at <a href="http://anthropogenicnarratives.labsintesi-c1.info/">Anthropogenic Narratives </a> 
-        a daily exhibition at the Triennale Museum of Milan.
+        The project has been exposed at <a href="http://anthropogenicnarratives.labsintesi-c1.info/">Anthropogenic Narratives</a> 
+         a daily exhibition at the Triennale Museum of Milan.
       </div>
     </div>
         
@@ -81,20 +81,23 @@
 
         <!--   GALLERIA PROGETTO-->
     <div id="projectgallery"> 
-      <img src="../assets/Illumia/DSC05861_anita.png"> 
+      <img src="../assets/Illumia/02.png">
+      <img class= "galleryelement" src="../assets/Illumia/palazzo_aria.png">
       <img class= "galleryelement" src="../assets/Illumia/DSC06141-Edit 3.png">
+      <video class= "galleryelement" width="100%" height="auto" poster="../assets/Illumia/illumia_trailer_Moment.jpg" controls>
+      <source src="../assets/Illumia/illumia_trailer.mp4" type="video/mp4">
+      </video >
+      <img class= "galleryelement" src="../assets/Illumia/science_lab.png"> 
       <img class= "galleryelement" src="../assets/Illumia/ILLUMIA_2.jpg">
+      <img class= "galleryelement" src="../assets/Illumia/presidente_reagan_finalissimo.png">
+      <img class= "galleryelement" src="../assets/Illumia/DSC05861_anita.png"> 
 
       
-      <iframe width="100%" height="1000px" src="https://www.youtube.com/embed/Dx4UVzjqef0?si=xQPI4wIkTbDm1-Sk" 
+      <iframe width="100%" height="1000" src="https://www.youtube.com/embed/Dx4UVzjqef0?si=xQPI4wIkTbDm1-Sk" 
       title="YouTube video player" frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
       class= "galleryelement" >
       </iframe>
-
-      <video class= "galleryelement" width="100%" height="auto" poster="../assets/Illumia/illumia_trailer_Moment.jpg" controls>
-      <source src="../assets/Illumia/illumia_trailer.mp4" type="video/mp4">
-      </video >
 
      <!--     <iframe width="100%" height="auto" controls source src="https://youtube/embed/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd">
       </iframe> -->
