--- a/about.html
+++ b/about.html
@@ -29,27 +29,38 @@
         <p class="nav" id="io">Hi, my name is <a href="./about.html">Martina</a> :)</p>
         <p class="nav"  id="works">and these are <a href="./index.html">my works</a> </p>
 
+        <p class="nav" id="contacts">
+        Looking forward to hearing from you! 
+        <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a>
+        <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a>
+        <a class="contacts" href="www.linkedin.com/in/martiiiesposito">linkedin</a>
+        </p>
         
     <!--   PRESENTAZIONE -->
-    <div id="selfp">
+    <div id="prescontainer">
+    <p id="selfp">
       <span id="ciao"> Ciao, </span></br>
         I am a young graphic designer based in <span id="milan"> Milan.</span></br>
         I love photography, letters, books, drawing, coding, and more or less  <span id="draw">
-        everything related to visual communication. </span></br></br>
-        I'm also an aerial dance teacher and a journalism passionate.
-        <a class="contacts" href="https://youtube.com/playlist?list=PLG5HuBbpokzXk9iGaSaQKJZcKnrzx2tTY&si=Q3EXjebN9UFnVLli">
-        Here</a>'s a youtube playlist to learn cool and geeky stuff more or less about anything. </br></br>
+        everything related to visual communication. </span></br>
+        I'm also an aerial dance teacher and a journalism passionate.</br><!-- </br> -->
 
+        <a href="https://youtube.com/playlist?list=PLG5HuBbpokzXk9iGaSaQKJZcKnrzx2tTY&si=Q3EXjebN9UFnVLli">
+        Here</a>'s a youtube playlist to learn cool and geeky stuff more or less about anything
+        and a daisy to thank you </br>for your attention :) 
+      </p>
+        <img id="marghe" src="./assets/manine/marghe.png">
+      </br></br></br>
+<!-- 
         Looking forward to hearing from you! </br>
         → <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a> </br>
         → <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a></br>
         → <a class="contacts" href="www.linkedin.com/in/martiiiesposito">linkedin</a> </br></br>
-
+ -->
         
-        Click <a class="contacts" href="./assets/Martina Esposito_CV.pdf" download >here</a> to download my CV</br></br>
+ <!--        Click <a class="contacts" href="./assets/Martina Esposito_CV.pdf" download >here</a> to download my CV</br></br> -->
 
-        <img id="marghe" src="./assets/manine/marghe.png">
-        Here is a daisy to thank you </br>for your attention :) </br></br></br>
+
 
     </div>
 
