--- a/index.html
+++ b/index.html
@@ -27,6 +27,13 @@
     <p class="nav" id="io">Hi, my name is <a href="./about.html">Martina</a> :)</p>
     <p class="nav"  id="works">and these are <a href="./index.html">my works</a> </p> 
 
+    <p class="nav" id="contacts">
+      Looking forward to hearing from you! 
+      <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a>
+      <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a>
+      <a class="contacts" href="www.linkedin.com/in/martiiiesposito">linkedin</a>
+      </p>
+
 <!--   GRIGLIA DI PROGETTI -->
     <div id="gridprojects">
 
@@ -35,6 +42,7 @@
         <p class="numero">1</p>
         <img src="./assets/home/illumia.png">
         <img src="./assets/home/mask/illumiamask.png" class="overlay">
+        <p class="info1">Illumia, 2023 </br>A speculative design project to look at the problem of climate change from a non-human perspective.</p>
         </a>
       </div>
       <div class="item2" id="brut" title="VALLI UNITE,2022"> <!-- VALLI UNITE -->
@@ -53,19 +61,19 @@
         <img src="./assets/home/drawing arena.png">
         <img src="./assets/home/mask/drawing arena.png" class="overlay">
       </div>
-      <div class="item5" id="palomar">  <!-- PALOMAR -->
-        <p class="numero">5</p>
-        <img src="./assets/home/palomar.png">
-        <img src="./assets/home/mask/palomarmask.png" class="overlay">
-      </div>
       <div class="item6">  <!-- BOOK OF SELF -->
         <a href="./pages/book of self.html"></a>
-        <p class="numero">6</p>
+        <p class="numero">5</p>
         <img src="./assets/home/self.png">
         <img src="./assets/home/mask/selfmask.png" class="overlay">
         <p class="info">Book of self, 2023 </br> a collection of analog photography prints </p>
-
       </div>
+      <div class="item5" id="palomar">  <!-- PALOMAR -->
+        <p class="numero">6</p>
+        <img src="./assets/home/palomar.png">
+        <img src="./assets/home/mask/palomarmask.png" class="overlay">
+      </div>
+
       <div class="item7">  <!-- UN'ESTATE -->
         <p class="numero">7</p>
           <img src="./assets/home/riso.png">
@@ -90,10 +98,10 @@
     
       <p class="listelement listanno">2023</p>
       <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
-      <p class="listelement"> Book of self</p>
       <p class="listelement"> N10 </p>
       <p class="listelement"> Drawing app</p>  
       <p class="listelement"> Zoo Agency</p>
+      <p class="listelement"> 5.<a href="./pages/book of self.html"> Book of self</a></p>
 
       <p class="listelement listanno">2022</p>
       <p class="listelement"> Un'estate</p>  
