--- a/pages/book of self.html
+++ b/pages/book of self.html
@@ -30,17 +30,22 @@
         <div id="titolo">Book of self </div>
         <div id="anno">2023</div>
         <div id="descrizione">
-          A series of twelve illustrations realized for the 2022
-          calendar.
-          Each month is presented as a still life of a table
-          at breakfast time, returning the feeling of that
-          particular period of the year by combining seasonal
-          food with different lights and shades of color.
-          Though the habit of breakfast hasn’t got anything
-          artistic in itself, it can become a moment of care
-          and beauty to start the day in a different mood.
-          For this project, I was <a href="https://www.brillomagazine.it/la-bellezza-del-quotidiano-nelle-illustrazioni-di-martina-esposito/?lang=it">interviewed by Brillo</a>, an Italian
-          magazine about illustration.
+          A series of analog photographic prints exploring
+          the theme of self-representation. </br></br>
+          Through the lens of the camera, the image of
+          the person detaches from its identity and becomes
+          a shape against a background, a part of a new
+          bi-dimensional reality. By playing both in the
+          studio and in the dark room, frames of different
+          body parts were used to recreate iconic pictures
+          of photographers such as Bill Brandt and Robert
+          Mapplethorpe.
+          The work proceeded by trial and error, exploring
+          the possibility that the medium itself of photography
+          could offer. The final prints were bound into
+          a book while all the attempts and the experiments
+          relative to the process were collected into a separate
+          notebook.
         </div>
       </div>
 
