--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -26,6 +26,13 @@
     <!--   ELEMENTI IN ALTO -->
         <p class="nav" id="io">Hi, my name is <a href="../about.html">Martina</a> :)</p>
         <p class="nav"  id="works">and these are <a href="../index.html">my works</a> </p>
+
+        <p class="nav" id="contacts">
+          Looking forward to hearing from you! 
+          <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a>
+          <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a>
+          <a class="contacts" href="www.linkedin.com/in/martiiiesposito">linkedin</a>
+          </p>
     
     <!--   DESCRIZIONE PROGETTO-->
     <div id="projectlist"> 
