difference blendmode and book of self

--- a/about.html
+++ b/about.html
@@ -41,19 +41,22 @@
       
     <p class="selfp1">
       <span id="ciao"> Ciao, </span></br>
-        I am a young graphic designer based in <span id="milan"> Milan.</span></br>
-        I love photography, letters, books, drawing, coding, and more or less  <span id="draw">
-        everything related to visual communication. </span></br>
-        I'm also an aerial dance teacher and a journalism passionate.</br><!-- </br> -->
+      my name is Martina Esposito and I am a young
+      graphic designer based in <span id="milan"> Milan. </span>
+      I love letters, drawing, books, coding and more
+      or less <span id="draw">everything related to visual communication.</span></br></br>
+      I am also a true geek, and I spend my days between
+      my youtube playlist intitled 
+      “<a href="https://youtube.com/playlist?list=PLG5HuBbpokzXk9iGaSaQKJZcKnrzx2tTY&si=Q3EXjebN9UFnVLli">things I wanna learn</a>”
+      and practicing new <!-- binding tehniques for my bullet journals, and  --> climbings and crazy drops on aerial silks and hoop.</span></br></br>
+       <!--  I'm also an aerial dance teacher and a journalism passionate.</br></br> -->
     </p>
     
         <img id="marghe" src="./assets/manine/marghe.png">
-        <p class="selfp2">
-        <a href="https://youtube.com/playlist?list=PLG5HuBbpokzXk9iGaSaQKJZcKnrzx2tTY&si=Q3EXjebN9UFnVLli">
-        Here</a>'s a youtube playlist to learn cool and geeky stuff more or less about anything
-        and a daisy to thank you </br>for your attention :) 
-      </p>
-      </br></br></br>
+    <p class="selfp2">
+       Here is a daisy to thank you for your attention :) 
+    </p>
+      </br></br>
 <!-- 
         Looking forward to hearing from you! </br>
         → <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a> </br>
