--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
 <!--   GRIGLIA DI PROGETTI -->
     <div id="gridprojects">
 
-      <div class="item1" id="illumia" title="ILLUMIA,2023"> <!-- ILLUMIA -->
+      <div class="item1" id="illumia" title="Illumia,2023"> <!-- ILLUMIA -->
         <a href="./pages/illumia.html">
         <p class="numero">1</p>
         <img src="./assets/home/illumia.png">
@@ -45,7 +45,7 @@
         <p class="info1">Illumia, 2023 </br>A speculative design project to look at the problem of climate change from a non-human perspective.</p>
         </a>
       </div>
-      <div class="item2" id="brut" title="VALLI UNITE,2022"> <!-- VALLI UNITE -->
+      <div class="item2" id="brut" title="Valli Unite,2022"> <!-- VALLI UNITE -->
         <p class="numero">2</p>
         <img src="./assets/home/brut.png">
         <img src="./assets/home/mask/brutmask.png" class="overlay">
@@ -61,12 +61,13 @@
         <img src="./assets/home/drawing arena.png">
         <img src="./assets/home/mask/drawing arena.png" class="overlay">
       </div>
-      <div class="item6">  <!-- BOOK OF SELF -->
+      <div class="item6" title="Book of Self,2023">  <!-- BOOK OF SELF -->
         <a href="./pages/book of self.html"></a>
         <p class="numero">5</p>
         <img src="./assets/home/self.png">
-        <img src="./assets/home/mask/selfmask.png" class="overlay">
-        <p class="info">Book of self, 2023 </br> a collection of analog photography prints </p>
+<!--         <img src="./assets/home/mask/selfmask.png" class="overlay"> -->
+        <img src="./assets/bookofself/scangif.gif" class="gif">
+        <!-- <p class="info">Book of self, 2023 </br> a collection of analog photography prints </p> -->
       </div>
       <div class="item5" id="palomar">  <!-- PALOMAR -->
         <p class="numero">6</p>
