--- a/pages/book of self.html
+++ b/pages/book of self.html
@@ -52,11 +52,12 @@
       <div id="info"> 
         <div class="infoelement"> 
           <span>Field</span> 
-          Illustration
+          Analog photography
+          Book-binding
         </div>
         <div class="infoelement"> 
         <span>Context</span> 
-        Personal project
+        Advanced Representation Laboratory, IADE, Lisbon
       </div>
         
       </div>
@@ -64,14 +65,15 @@
     </div>
 
     <div id="projectgallery"> 
-      <img src="../assets/calendario/Spiral_Book_Mockup_4.png"> 
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 2.png">
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 12.png">
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 1.png">
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 10.png">
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 11.png">
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 7.png">
-      <img class= "galleryelement" src="../assets/calendario/Tavola da disegno 9a.png">
+      <img src="../assets/bookofself/Mannequin.png"> 
+      <img class= "galleryelement" src="../assets/bookofself/scan7.png">
+      <img class= "galleryelement" src="../assets/bookofself/braccia.png">
+      <img class= "galleryelement" src="../assets/bookofself/Dune.png">
+      <img class= "galleryelement" src="../assets/bookofself/scan4.png">
+      <img class= "galleryelement" src="../assets/bookofself/fontana.png">
+      <img class= "galleryelement" src="../assets/bookofself/quad1.png">
+      <img class= "galleryelement" src="../assets/bookofself/scan4.png">
+      <img class= "galleryelement" src="../assets/bookofself/scan.png">
     </div>
     
 
