--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -38,7 +38,7 @@
     <div id="projectlist"> 
       <div>
        <div id="titolo"> Illumia </div>
-       <div id="anno"> 2023</div>
+       <span id="anno"> 2023</span>
        <div id="descrizione">
         A speculative design project to look at the problem
         of climate change from a non-human perspective.</br></br>
@@ -100,13 +100,13 @@
       <img class= "galleryelement" src="../assets/Illumia/DSC05861_anita.png"> 
 
       
-      <iframe width="100%" height="1000" src="https://www.youtube.com/embed/Dx4UVzjqef0?si=xQPI4wIkTbDm1-Sk" 
+      <iframe width="100%" height="auto" src="https://www.youtube.com/embed/Dx4UVzjqef0?si=xQPI4wIkTbDm1-Sk" 
       title="YouTube video player" frameborder="0" 
       allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen
       class= "galleryelement" >
       </iframe>
-
-     <!--     <iframe width="100%" height="auto" controls source src="https://youtube/embed/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd">
+<!-- 
+         <iframe width="100%" height="auto" controls source src="https://youtube/embed/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd">
       </iframe> -->
 
      <!--  <video>
