--- a/index.html
+++ b/index.html
@@ -31,7 +31,8 @@
       Looking forward to hearing from you! 
       <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a>
       <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a>
-      <a class="contacts" href="www.linkedin.com/in/martiiiesposito">linkedin</a>
+      <a class="contacts" href="https://github.com/martinaesposito">github</a>
+      <a class="contacts" href="https://www.linkedin.com/in/martiiiesposito/">linkedin</a>
       </p>
 
 <!--   GRIGLIA DI PROGETTI -->
@@ -101,19 +102,22 @@
       <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
       <p class="listelement"> N10 </p>
       <p class="listelement"> Drawing app</p>  
+      <p class="listelement"><a href="https://martinaesposito.github.io/make-a-wish/" target=”_blank” > Make a wish ↗</a></p>
       <p class="listelement"> Zoo Agency</p>
-      <p class="listelement"> 5.<a href="./pages/book of self.html"> Book of self</a></p>
+      <p class="listelement"> 6.<a href="./pages/book of self.html"> Book of self</a></p>
+<!--       <p class="listelement"><a href="https://martinaesposito.github.io/WEBB/" target=”_blank” > WEBB ↗</a></p> -->
 
       <p class="listelement listanno">2022</p>
       <p class="listelement"> Un'estate</p>  
       <p class="listelement"> Valli Unite</p>
       <p class="listelement"> Factanza</p>  
-      <p class="listelement">7. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
-      <p class="listelement"> Martas Nature Bar </p>
+      <p class="listelement">12. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
+<!--       <p class="listelement"> Martas Nature Bar </p> -->
 
       <p class="listelement listanno">2021</p>
       <p class="listelement"> Knockout</p>
       <p class="listelement"> Design your way</p>
+      <p class="listelement"> <a href="https://martinaesposito.github.io/SPOTyourVIBE/" target=”_blank” > SPOT your VIBE ↗</a></p>
       <p class="listelement"> La storia dimostra</p>
       <p class="listelement"> Bullet Journal</p>
     </div>
