--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -31,8 +31,9 @@
           Looking forward to hearing from you! 
           <a class="contacts" href="mailto:martiiiesposito@gmail.com">mail</a>
           <a class="contacts" href="https://www.instagram.com/martiiiesposito/">instagram</a>
-          <a class="contacts" href="www.linkedin.com/in/martiiiesposito">linkedin</a>
-          </p>
+          <a class="contacts" href="https://github.com/martinaesposito">github</a>
+          <a class="contacts" href="https://www.linkedin.com/in/martiiiesposito/">linkedin</a>
+        </p>
     
     <!--   DESCRIZIONE PROGETTO-->
     <div id="projectlist"> 
