--- a/index.html
+++ b/index.html
@@ -38,9 +38,9 @@
 
     <div class="item1" id="illumia" title="Illumia,2023"> <!-- ILLUMIA -->
       <a href="./pages/illumia.html">
-        <p class="numero">1</p>
+       <!--  <p class="numero">1</p> -->
         <img src="./assets/home/illumia.png">
-        <img src="./assets/home/mask/illumiamask.png" class="overlay">
+     <!--    <img src="./assets/home/mask/illumiamask.png" class="overlay"> -->
         <p class="info1">Illumia, 2023 </p>
       </a>
     </div>
@@ -62,7 +62,7 @@
     </div>
     <div class="item6" title="Book of Self,2023"> <!-- BOOK OF SELF -->
       <a href="./pages/book of self.html">
-      <p class="numero">5</p>
+      <!-- <p class="numero">5</p> -->
       <img src="./assets/home/self.png">
       <!--         <img src="./assets/home/mask/selfmask.png" class="overlay"> -->
       <img src="./assets/bookofself/scangif.gif" class="gif">
