--- a/pages/illumia.html
+++ b/pages/illumia.html
@@ -36,18 +36,19 @@
 
   <!--   GALLERIA PROGETTO-->
   <div id="projectgallery">
-    <img src="../assets/Illumia/02.png">
+    <img  src="../assets/Illumia/gif illumia vari tramonti ridotta.gif">
+    <img class="galleryelement" src="../assets/Illumia/02.png">
     <img class="galleryelement" src="../assets/Illumia/palazzo_aria.png">
     <img class="galleryelement" src="../assets/Illumia/DSC06141-Edit 3.png">
     <video class="galleryelement" width="100%" height="auto" poster="../assets/Illumia/illumia_trailer_Moment.jpg" controls>
       <source src="../assets/Illumia/illumia_trailer.mp4" type="video/mp4"> </video>
+      
     <img class="galleryelement" src="../assets/Illumia/science_lab.png">
     <img class="galleryelement" src="../assets/Illumia/ILLUMIA_2.jpg">
     <img class="galleryelement" src="../assets/Illumia/presidente_reagan_finalissimo.png">
-    <img class="galleryelement" src="../assets/Illumia/DSC05861_anita.png">
-    
+ <!--    <img class="galleryelement" src="../assets/Illumia/DSC05861_anita.png">
     <iframe width="100%" src="https://www.youtube.com/embed/xHrGZHcw4C4?si=NPqG37AYDkoWMCmq&amp;controls=0" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen></iframe>
-
+ -->
     <!-- 
       <iframe width="100%" height="auto" controls source src="https://youtube/embed/Dx4UVzjqef0?si=T9y3vv5gTvwABGtd">
       </iframe> -->
