--- a/about.html
+++ b/about.html
@@ -55,8 +55,8 @@
       my youtube playlist intitled “things I wanna learn” 
     and practicing new climbings and crazy drops on aerial silks and hoop. </p>
     <img id="marghe" src="./assets/manine/marghe.png">
-    <p class="selfp padtop">Here is a daisy</p>   
-    <p class="selfp last">to thank you for your attention :)</p>
+    <p class="selfp padtop">Here is a daisy<!-- </p>   
+    <p class="selfp last"> -->to thank you for your attention :)</p>
 
   </div>
 
