--- a/index.html
+++ b/index.html
@@ -33,97 +33,64 @@
 
   <a class="nav" id="mail" href="mailto:martiiiesposito@gmail.com">Looking forward to hearing from you!</a>
 
+
+
   <!--   GRIGLIA DI PROGETTI -->
   <div id="gridprojects">
 
-    <div class="item1" id="illumia" title="Illumia,2023"> <!-- ILLUMIA -->
-      <a href="./pages/illumia.html">
-       <!--  <p class="numero">1</p> -->
-        <img src="./assets/home/illumia.png">
-     <!--    <img src="./assets/home/mask/illumiamask.png" class="overlay"> -->
-        <p class="info1">Illumia, 2023 </p>
-      </a>
-    </div>
-    <div class="item2" id="brut" title="Valli Unite,2022"> <!-- VALLI UNITE -->
-      <p class="numero">2</p>
-      <img src="./assets/home/brut.png">
-      <img src="./assets/home/mask/brutmask.png" class="overlay">
-    </div>
-    <div class="item3" id="noi"> <!-- N01 -->
-      <p class="numero">3</p>
-      <img src="./assets/home/n01.png">
-      <img src="./assets/home/mask/n01mask.png" class="overlay">
-
-    </div>
-    <div class="item4" id="drawingarena"> <!-- DRAWING ARENA -->
-      <p class="numero">4</p>
-      <img src="./assets/home/drawing arena.png">
-      <img src="./assets/home/mask/drawing arena.png" class="overlay">
-    </div>
-    <div class="item6" title="Book of Self,2023"> <!-- BOOK OF SELF -->
-      <a href="./pages/book of self.html">
-      <!-- <p class="numero">5</p> -->
-      <img src="./assets/home/self.png">
-      <!--         <img src="./assets/home/mask/selfmask.png" class="overlay"> -->
-      <img src="./assets/bookofself/scangif.gif" class="gif">
-      <!-- <p class="info">Book of self, 2023 </br> a collection of analog photography prints </p> -->
-    </a>
-    </div>
-    <div class="item5" id="palomar"> <!-- PALOMAR -->
-      <p class="numero">6</p>
-      <img src="./assets/home/palomar.png">
-      <img src="./assets/home/mask/palomarmask.png" class="overlay">
+    <div class="line1">
+      <div class="item1" title="Illumia,2023"> <!-- ILLUMIA -->
+        <a href="./pages/illumia.html">
+          <img src="./assets/Illumia/09.png">
+        </a>
+      </div>
+      <div class="item2" id="brut" title="Valli Unite,2022"> <!-- VALLI UNITE -->
+        <img src="./assets/home/brut.png">
+      </div>
     </div>
 
-    <div class="item7"> <!-- UN'ESTATE -->
-      <p class="numero">7</p>
-      <img src="./assets/home/riso.png">
-      <img src="./assets/home/mask/risomask.png" class="overlay">
+    <div class="line2">
+      <div class="item3" id="noi"> <!-- N01 -->
+        <img src="./assets/home/n01.png">
+      </div>
+      <div class="item1" title="Illumia,2023"> <!-- ILLUMIA -->
+        <a href="./pages/illumia.html">
+          <img src="./assets/Illumia/DSC05704.png">
+        </a>
+      </div>
+      <div class="item4" id="drawingarena"> <!-- DRAWING ARENA -->
+        <img src="./assets/home/drawing arena.png">
+      </div>
     </div>
-    <div class="item8"> <!-- CALENDARIO -->
-      <a href="./pages/calendario.html">
-        <p class="numero">8</p>
-        <img src="./assets/home/calendar.png">
-        <img src="./assets/home/mask/calendarmask.png" class="overlay">
-      </a>
+
+    <div class="line3">
+      <div class="item6" title="Book of Self,2023"> <!-- BOOK OF SELF -->
+        <a href="./pages/book of self.html">
+          <img src="./assets/home/self.png">
+        </a>
+      </div>
+      <div class="item5" id="palomar"> <!-- PALOMAR -->
+        <img src="./assets/home/palomar.png">
+      </div>
+      <div class="item7"> <!-- UN'ESTATE -->
+        <img src="./assets/home/riso.png">
+      </div>
     </div>
-    <div class="item9"> <!-- DESIGN YOUR WAY -->
-      <p class="numero">9</p>
-      <img src="./assets/home/cover design your way.png">
-      <img src="./assets/home/mask/cover design your waymask.png" class="overlay">
+
+    <div class="line4">
+      <div class="item8"> <!-- CALENDARIO -->
+        <a href="./pages/calendario.html">
+          <img src="./assets/home/calendar.png">
+        </a>
+      </div>
+      <div class="item9"> <!-- DESIGN YOUR WAY -->
+        <img src="./assets/home/cover design your way.png">
+      </div>
     </div>
   </div>
 
-  <!-- ELENCO DI PROGETTI A DESTRA -->
-  <!-- <div id="list">
-
-    <p class="listelement listanno">2023</p>
-    <p class="listelement">1. <a href="./pages/illumia.html">Illumia</a></p>
-    <p class="listelement"> N10 </p>
-    <p class="listelement"> Drawing app</p>
-    <p class="listelement"><a href="https://martinaesposito.github.io/make-a-wish/" target=”_blank”> Make a wish ↗</a>
-    </p>
-    <p class="listelement"> Zoo Agency</p>
-    <p class="listelement"> 6.<a href="./pages/book of self.html"> Book of self</a></p>
-     <p class="listelement"><a href="https://martinaesposito.github.io/WEBB/" target=”_blank” > WEBB ↗</a></p>
-
-    <p class="listelement listanno">2022</p>
-    <p class="listelement"> Un'estate</p>
-    <p class="listelement"> Valli Unite</p>
-    <p class="listelement"> Factanza</p>
-    <p class="listelement">12. <a href="./pages/calendario.html">Buongiorno, ogni giorno</a></p>
-   <p class="listelement"> Martas Nature Bar </p>
-
-    <p class="listelement listanno">2021</p>
-    <p class="listelement"> Knockout</p>
-    <p class="listelement"> Design your way</p>
-    <p class="listelement"> <a href="https://martinaesposito.github.io/SPOTyourVIBE/" target=”_blank”> SPOT your VIBE
-        ↗</a></p>
-    <p class="listelement"> La storia dimostra</p>
-    <p class="listelement"> Bullet Journal</p>
-  </div> -->
-
-  <!--<script src="sketch.js"></script>-->
+  
+  <script src="./index.js"></script>
 </body>
 
 </html>
