--- a/pages/book of self.html
+++ b/pages/book of self.html
@@ -67,13 +67,14 @@
 
       <div id="info"> 
         <div class="infoelement"> 
-          <span>Field</span> 
-          Analog photography
+          <i class="titlObl">Field</i>
+          Analog photography</br>
           Book-binding
         </div>
         <div class="infoelement"> 
-        <span>Context</span> 
-        Advanced Representation Laboratory, IADE, Lisbon
+          <i class="titlObl">Context</i>
+        Advanced Representation Laboratory, </br>
+        IADE, Lisbon
       </div>
         
       </div>
