--- a/pages/calendario.html
+++ b/pages/calendario.html
@@ -41,7 +41,7 @@
     
     <div id="projectlist"> 
       <div id="main">
-        <div id="titolo">Buongiorno, ogni giorno </div>
+        <div id="titolo">Buongiorno, </br>ogni giorno</div>
         <i id="anno">2022</i>
         <div id="descrizione">
           A series of twelve illustrations realized for the 2022
