--- a/about.html
+++ b/about.html
@@ -54,7 +54,7 @@
       I am also a true geek, and I spend my days between
       my youtube playlist intitled “things I wanna learn” 
     and practicing new climbings and crazy drops on aerial silks and hoop. </p>
-   <!--  <img id="marghe" src="./assets/manine/marghe.png"> -->
+    <img id="marghe" src="./assets/manine/marghe.png">
     <p class="selfp padtop">Here is a daisy<!-- </p>   
     <p class="selfp last"> -->to thank you for your attention :)</p>
 
@@ -96,11 +96,6 @@
     <p class="listelement"> Bullet Journal</p>
   </div>
 -->
-
-  <script src="./sketch.js"></script>
-  <script>
-    let touchPos= {x:undefined, y:undefined}
-  </script>
   <script src="./about.js"></script>
 
 </body>
