--- a/index.html
+++ b/index.html
@@ -12,16 +12,15 @@
   <!--  STYLE -->
   <link rel="stylesheet" type="text/css" href="./style.css">
   <link rel="stylesheet" type="text/css" href="./index.css">
-  <link rel="preconnect" href="https://fonts.googleapis.com">
 
   <!--   FONT -->
+  <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link
-    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,200;0,300;0,400;0,500;0,600;0,700;1,200;1,300;1,400;1,500;1,600;1,700&display=swap"
-    rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:ital,wght@0,300;0,400;0,600;1,300;1,400;1,600&family=IBM+Plex+Serif:ital,wght@0,300;0,400;0,500;0,600;1,300;1,400;1,500;1,600&display=swap" rel="stylesheet">
 
   <!--  LIBRARIES -->
-  <script src="./libraries/p5.min.js"></script><!-- 
+  <script src="./libraries/p5.min.js"></script>
+  <script src="https://code.jquery.com/jquery-3.7.1.min.js" integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script><!-- 
     <script src="/libraries/p5.sound.min.js"></script> -->
 </head>
 
@@ -36,22 +35,33 @@
 
 
   <!--   GRIGLIA DI PROGETTI -->
-  <div id="gridprojects">
+  <div id="gridprojects" data-scroll-container>
 
-    <div class="line1">
+    <!-- colonna 1 -->
+    <div class="line1 column-reverse">
       <div class="item1" title="Illumia,2023"> <!-- ILLUMIA -->
         <a href="./pages/illumia.html">
           <img src="./assets/Illumia/09.png">
+          <!-- Illumia, 2023 -->
         </a>
       </div>
       <div class="item2" id="brut" title="Valli Unite,2022"> <!-- VALLI UNITE -->
         <img src="./assets/home/brut.png">
       </div>
+      <div class="itemk" title="Make a wish, 2023"> <!-- Make a wish -->
+        <a href="https://martinaesposito.github.io/make-a-wish/">
+          <img src="./assets/sketches/cover_1.png">
+          <!-- Illumia, 2023 -->
+        </a>
+      </div>
     </div>
 
+    <!-- colonna 2 -->
     <div class="line2">
-      <div class="item3" id="noi"> <!-- N01 -->
+      <div class="item3" id="noi" title="N01, 2023"> <!-- N01 -->
+        <a href="./pages/n01.html">
         <img src="./assets/home/n01.png">
+      </a>
       </div>
       <div class="item1" title="Illumia,2023"> <!-- ILLUMIA -->
         <a href="./pages/illumia.html">
@@ -63,7 +73,8 @@
       </div>
     </div>
 
-    <div class="line3">
+    <!-- colonna 3 -->
+    <div class="line3 column-reverse">
       <div class="item6" title="Book of Self,2023"> <!-- BOOK OF SELF -->
         <a href="./pages/book of self.html">
           <img src="./assets/home/self.png">
@@ -77,6 +88,7 @@
       </div>
     </div>
 
+    <!-- colonna 4 -->
     <div class="line4">
       <div class="item8"> <!-- CALENDARIO -->
         <a href="./pages/calendario.html">
@@ -90,7 +102,7 @@
   </div>
 
   
-  <script src="./index.js"></script>
+  <script type="module" src="./index.js"></script>
 </body>
 
 </html>
